<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_default" >

    <FrameLayout
        android:id="@id/main_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/maintab_toolbar_bg"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <ImageView
            android:id="@id/tab_selectedIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/tab_selected_indicator" />

        <LinearLayout
            android:id="@id/tab_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <com.viewpagerindicator.TabView
                android:id="@id/tab_home"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/tab_item_selector"
                android:clickable="true"
                android:drawableTop="@drawable/icon_home"
                android:gravity="center"
                android:text="@string/tab_home"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/tab_button_text_size" />

            <com.viewpagerindicator.TabView
                android:id="@id/tab_message"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/tab_item_selector"
                android:clickable="true"
                android:drawableTop="@drawable/icon_message"
                android:gravity="center"
                android:text="@string/tab_message"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/tab_button_text_size" />

            <com.viewpagerindicator.TabView
                android:id="@id/tab_selfinfo"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/tab_item_selector"
                android:clickable="true"
                android:drawableTop="@drawable/icon_selfinfo"
                android:gravity="center"
                android:text="@string/tab_selfinfo"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/tab_button_text_size" />

            <com.viewpagerindicator.TabView
                android:id="@id/tab_square"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/tab_item_selector"
                android:clickable="true"
                android:drawableTop="@drawable/icon_square"
                android:gravity="center"
                android:text="@string/tab_square"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/tab_button_text_size" />

            <com.viewpagerindicator.TabView
                android:id="@id/tab_more"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/tab_item_selector"
                android:clickable="true"
                android:drawableTop="@drawable/icon_more"
                android:gravity="center"
                android:text="@string/tab_more"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/tab_button_text_size" />
        </LinearLayout>
    </FrameLayout>

    <android.support.v4.view.ViewPager
        android:id="@id/tab_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_toolbar" />

</RelativeLayout>